apps/mlflow/mlflow.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mlflow
  namespace: mlflow
spec:
  selector:
    matchLabels:
      app: mlflow
  template:
    metadata:
      labels:
        app: mlflow
    spec:
      containers:
      - name: mlflow
        image: ghcr.io/mlflow/mlflow:v3.11.1-full
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "1"
            memory: "2Gi"
          limits:
            cpu: "2"
            memory: "3Gi"
        command:
        - mlflow
        - server
        - --backend-store-uri=postgresql://mlflow:mlflow@postgres:5432/mlflow
        - --default-artifact-root=s3://mlflow/
        - --host=0.0.0.0
        - --port=5000
        - --serve-artifacts
        - --static-prefix=/mlflow
        ports:
        - containerPort: 5000
        #readinessProbe:
        #  httpGet:
        #    path: /
        #    port: 5000
        #  initialDelaySeconds: 10
        #  periodSeconds: 5
        #livenessProbe:
        #  httpGet:
        #    path: /
        #    port: 5000
        #  initialDelaySeconds: 30
        #  periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: mlflow
  namespace: mlflow
spec:
  selector:
    app: mlflow
  ports:
  - port: 5000
    targetPort: 5000
